# BlueBlast

./: .gitignore  CMakeLists.txt  Design Document.docx  README.md  a  ~$sign Document.docx
.github/workflows/: build.yml
Documents/: Design Document.docx  Feedback Blog.docx  ~$sign Document.docx  ~WRL2519.tmp
Previous Versions/v0.1/blueblast/blueblast/: Game.cpp  Game.h
Previous Versions/v0.1/blueblast/blueblast/Debug/blueblast.tlog/: CL.command.1.tlog
Previous Versions/v0.2/blueblast/blueblast/: main.cpp
Previous Versions/v0.2/blueblast/blueblast/Debug/: blueblast.ilk
Previous Versions/v0.2/blueblast/blueblast/Debug/blueblast.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.write.1.tlog
Previous Versions/v0.3/blueblast/blueblast/: Game.cpp  blueblast.vcxproj  main.cpp
Previous Versions/v0.3/blueblast/blueblast/Debug/blueblast.tlog/: CL.read.1.tlog  link.read.1.tlog
Previous Versions/v0.4/blueblast/blueblast/Debug/: blueblast.exe.recipe  vc143.idb
Previous Versions/v0.4/blueblast/blueblast/Debug/blueblast.tlog/: CL.read.1.tlog  blueblast.lastbuildstate  link.write.1.tlog
SpaceShipChristmas/: shmup_skeleton.sln
SpaceShipChristmas/shmup_skeleton/: Game.cpp  Game.h  GameObj.cpp  GameObj.h  MyDB.cpp  MyDB.h  ParticleSys.cpp  ParticleSys.h  Utils.cpp  Utils.h  main.cpp  shmup_skeleton.vcxproj  shmup_skeleton.vcxproj.filters
blueblast/: blueblast.sln
blueblast/blueblast/: Game.cpp  Game.h  MyDB.cpp  MyDB.h  Utils.cpp  Utils.h  blueblast.vcxproj  blueblast.vcxproj.filters  main.cpp
blueblast/blueblast/Debug/: blueblast.exe.recipe  blueblast.ilk  vc143.idb
blueblast/blueblast/Debug/blueblast.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  blueblast.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Game.cpp  Game.h  Metrics.cpp  Metrics.h  Object.h  Player.cpp  Player.h  Tile.h  main.cpp
